added graphql documents for marketplace operations